--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -811,7 +811,7 @@
        <div>
         <section>
          <div class="_1dasptx">
-          <div class="_jro6t0">
+          <div class="flex">
            <div class="_t0tx82">
             <h1 tabindex="-1" class="_14i3z6h"><div class="_1lmb2fq">Recommended help</div></h1>
            </div>
@@ -879,7 +879,7 @@
                </div>
                <div style="margin-top: 4px;">
                 <span class="_185kh56">
-                 <div class="_jro6t0">
+                 <div class="flex">
                   <div class="_rqfxvmb"><div>Read more</div></div>
                   <div class="_rqfxvmb">
                    <div style="margin-left: 8px;">
@@ -903,7 +903,7 @@
                </div>
                <div style="margin-top: 4px;">
                 <span class="_185kh56">
-                 <div class="_jro6t0">
+                 <div class="flex">
                   <div class="_rqfxvmb"><div>Read more</div></div>
                   <div class="_rqfxvmb">
                    <div style="margin-left: 8px;">
@@ -925,7 +925,7 @@
                <div class="_1kpuxvlh" title="Forget your password or having trouble logging in? We’ve been there. Time for a reset.">Forget your password or having trouble logging in? We’ve been there. Time for a reset.</div>
                <div style="margin-top: 4px;">
                 <span class="_185kh56">
-                 <div class="_jro6t0">
+                 <div class="flex">
                   <div class="_rqfxvmb"><div>Read more</div></div>
                   <div class="_rqfxvmb">
                    <div style="margin-left: 8px;">
@@ -949,7 +949,7 @@
                </div>
                <div style="margin-top: 4px;">
                 <span class="_185kh56">
-                 <div class="_jro6t0">
+                 <div class="flex">
                   <div class="_rqfxvmb"><div>Read more</div></div>
                   <div class="_rqfxvmb">
                    <div style="margin-left: 8px;">
@@ -1029,7 +1029,7 @@
             <div style="margin-top: 8px; margin-bottom: 8px;">
              <div class="_czm8crp">
               <a href="/forgot_password" target="_blank" class="_12jvhwr" aria-busy="false">
-               <div class="_jro6t0">
+               <div class="flex">
                 <div class="_rqfxvmb"><div>Reset password</div></div>
                 <div class="_rqfxvmb">
                  <div style="margin-left: 8px;">
@@ -1045,7 +1045,7 @@
             <div style="margin-top: 8px; margin-bottom: 8px;">
              <div class="_czm8crp">
               <a href="/users/payment_methods" target="_blank" class="_12jvhwr" aria-busy="false">
-               <div class="_jro6t0">
+               <div class="flex">
                 <div class="_rqfxvmb"><div>Edit your payment methods</div></div>
                 <div class="_rqfxvmb">
                  <div style="margin-left: 8px;">
@@ -1061,7 +1061,7 @@
             <div style="margin-top: 8px; margin-bottom: 8px;">
              <div class="_czm8crp">
               <a href="/verify" target="_blank" class="_12jvhwr" aria-busy="false">
-               <div class="_jro6t0">
+               <div class="flex">
                 <div class="_rqfxvmb"><div>Add your ID</div></div>
                 <div class="_rqfxvmb">
                  <div style="margin-left: 8px;">
