--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -13291,7 +13291,7 @@
                                               for="reviews-search-input"
                                             >
                                               <div dir="ltr">
-                                                <div class="_jro6t0">
+                                                <div class="flex">
                                                   <input
                                                     placeholder="Search reviews"
                                                     aria-label="Search reviews, Press 'Enter' to search"
@@ -14684,7 +14684,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -14724,7 +14724,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -14764,7 +14764,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -14815,7 +14815,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -14859,7 +14859,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -14899,7 +14899,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -14950,7 +14950,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15001,7 +15001,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15041,7 +15041,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15092,7 +15092,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15143,7 +15143,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15183,7 +15183,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15223,7 +15223,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15263,7 +15263,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15314,7 +15314,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15365,7 +15365,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15409,7 +15409,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15449,7 +15449,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15489,7 +15489,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15533,7 +15533,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15577,7 +15577,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15617,7 +15617,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15657,7 +15657,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15708,7 +15708,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15763,7 +15763,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15803,7 +15803,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15848,7 +15848,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15899,7 +15899,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15939,7 +15939,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -15990,7 +15990,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -16046,7 +16046,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -16093,7 +16093,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
@@ -16138,7 +16138,7 @@
                                               aria-disabled="false"
                                               class="rcem0st dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="_7ytxmo">
                                                   <div class="_oyq8vf">
                                                     <svg
