--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -867,7 +867,7 @@
            <section>
             <div style="margin-top: 16px; margin-bottom: 16px;">
              <h2 tabindex="-1" class="_14i3z6h">
-              <span class="_1xxanas2"><div class="_4efw5a">Recommended articles</div></span>
+              <span class="_1xxanas2"><div class="uppercase">Recommended articles</div></span>
              </h2>
             </div>
             <div style="margin-bottom: 8px;">
@@ -970,7 +970,7 @@
            <section>
             <div style="margin-top: 16px; margin-bottom: 16px;">
              <h2 tabindex="-1" class="_14i3z6h">
-              <span class="_1xxanas2"><div class="_4efw5a">Explore more articles by topic</div></span>
+              <span class="_1xxanas2"><div class="uppercase">Explore more articles by topic</div></span>
              </h2>
             </div>
             <div style="margin-top: 24px; margin-bottom: 24px;">
@@ -1023,7 +1023,7 @@
            <section>
             <div style="margin-top: 16px; margin-bottom: 16px;">
              <h2 tabindex="-1" class="_14i3z6h">
-              <span class="_1xxanas2"><div class="_4efw5a">Other things you can do</div></span>
+              <span class="_1xxanas2"><div class="uppercase">Other things you can do</div></span>
              </h2>
             </div>
             <div style="margin-top: 8px; margin-bottom: 8px;">
