--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -812,7 +812,7 @@
         <section>
          <div class="_1dasptx">
           <div class="flex">
-           <div class="_t0tx82">
+           <div class="flex-grow-1">
             <h1 tabindex="-1" class="_14i3z6h"><div class="_1lmb2fq">Recommended help</div></h1>
            </div>
            <div class="_3mnosr">
